Add a user option to allow delete and backspace to delete immediately even if the character to be deleted is visually distant from the caret location. Bug 328834, r=uriber@gmail.com, sr=roc